--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,6 +12,10 @@
 @import url('./base/line.scss');
 @import url('./base/page.scss');
 
+@import url('./menu/menu.scss');
+@import url('./heading/heading.scss');
+@import url('./search-menu/serach-menu.scss');
+
 
 body {
   margin: 0;
