--- a/src/styles/base/dropdown.scss
+++ b/src/styles/base/dropdown.scss
@@ -1,3 +1,65 @@
 .drop-down {
+    position: relative;
+    width: 240px;
+    min-height: 43px;
+    overflow: hidden;
+
+    border-radius: 10px;
+
+    transition: all .15s linear;
+
     cursor: pointer;
+
+    &_default {
+        background-color: var(--color-primary-background);
+    }
+
+    &_white {
+        background-color: var(--color-white);
+
+        &_active {
+        box-shadow: 0 0 20px var(--color-primary-background-assertive);}
+    }
+
+    &_transparent {
+        background-color: transparent;
+    }
+
+    &__option {
+        display: flex;
+        justify-content: start;
+        width: 100%;
+        height: 100%;
+        padding: 12px 0;
+        padding-left: 40px;
+
+        &:hover {
+            background-color: var(--color-primary-background-assertive);
+        }
+
+        &:nth-last-child(1) {
+            border-radius: 0 0 10px 10px;
+        }
+
+        &_selected {
+            &:hover {
+                background-color: transparent;
+            }
+        }
+    }
+
+    &__icon {
+        right: 12px;
+        transition: all .3s ease;
+
+        cursor: pointer;
+
+        &_absolute {
+            position: absolute;
+        }
+
+        &_opened {
+            transform: rotate(180deg);
+        }
+    }
 }
