--- a/src/styles/base/page.scss
+++ b/src/styles/base/page.scss
@@ -1,6 +1,7 @@
 .page {
-    width: 100vw;
-    height: 100vh;
+    //TODO: подумать над максимальным размером
+    max-width: 100vw;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
